# lowe-cli

./: .gitignore  README.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: linter.yaml
apps/knowledge_base/: Dockerfile  README.md  knowledge_base.json  main.py  pyproject.toml
cli-sage/: .env  .env.example  README.md  main.py  pyproject.toml  test.py
cli-sage/services/: cli_sage.py
cli-sage/services/huggingface/: embedding_model_service.py
cli-sage/services/text_splitter/: splitter_service.py
cli-sage/utils/: constants.py
lowe-cli/: .env.example  README.md  main.py  pyproject.toml
lowe-cli/services/: __init__.py  chat_management.py  llm_client.py  lowe_cli.py
lowe-cli/services/cli/: __init__.py  base_input_handler.py  cli_interface.py  input_handler.py  input_validator.py  multiline_input_handler.py  terminal_utils.py
lowe-cli/services/commands/: __init__.py  base_command_handler.py  command_factory.py  command_handlers.py  help_command_handler.py  index_command_handler.py  lookup_command_handler.py  perform_command_handler.py
lowe-cli/services/history/: __init__.py  history_service.py
lowe-cli/services/huggingface/: __init__.py  embedding_model_service.py
lowe-cli/services/text_splitter/: __init__.py  splitter_service.py
lowe-cli/services/ui/: __init__.py  ui_service.py
lowe-cli/services/vector_db/: __init__.py  chroma_service.py  indexing_service.py
lowe-cli/services/web_base_loader/: __init__.py  loader_service.py
lowe-cli/utils/: __init__.py  constants.py
(+2 files in other folders)
